landing page, projects, footer sections updated

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             link__hover-effect--black
           ">Contact</a>
         </li>
-        <li class="nav__link">
+        <li class="nav__link click">
           <a href="#" class="
             nav__link--anchor
             link__hover-effect
@@ -59,7 +59,7 @@
         </p>
       </div>
       <div class="social__list">
-        <a href="#" target="_blank" class="social__link click">
+        <a href="https://www.linkedin.com/in/jennifer-reece-0262862aa/" target="_blank" class="social__link click">
           <i class="fa-brands fa-linkedin-in"></i>
         </a>
         <a href="https://github.com/msjennifereece" target="_blank" class="social__link click">
@@ -70,6 +70,138 @@
         </a>
       </div>
     </header>
+    <div class="mail__btn click">
+      <i class="fa-solid fa-envelope"></i>
+    </div>
+    <a href="#projects" class="scroll">
+      <div class="scroll__icon click"></div>
+    </a>
   </section>
+  <section id="projects">
+    <div class="container">
+      <div class="row">
+        <h1 class="section__title">
+          Here are some of my <span class="teal">projects</span>
+        </h1>
+        <ul class="project__list">
+          <li class="project">
+            <div class="project__wrapper">
+              <img class="project__img" src="/assets/blinker mockup.png" alt="">
+              <div class="project__wrapper--bg"></div>
+              <div class="project__description">
+                <h3 class="project__description--title">
+                  Car Sales Projects
+                </h3>
+                <h4 class="project__description--sub-title">
+                  Html, CSS, JavaScript, Vue, Vuex
+                </h4>
+                <p class="project__description--para">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, molestiae cumque esse ducimus quos earum perferendis sequi eos error porro est officiis voluptates ullam praesentium incidunt? Iure adipisci consequuntur quidem.
+                </p>
+                <div class="project__description--links">
+                  <a href="#" class="project__description--link">
+                    <i class="fa-brands fa-github"></i>
+                  </a>
+                  <a href="#">
+                    <i class="fa-solid fa-link"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="project">
+            <div class="project__wrapper">
+              <img class="project__img" src="/assets/blinker mockup.png" alt="">
+              <div class="project__wrapper--bg"></div>
+              <div class="project__description">
+                <h3 class="project__description--title">
+                  Car Sales Projects
+                </h3>
+                <h4 class="project__description--sub-title">
+                  Html, CSS, JavaScript, Vue, Vuex
+                </h4>
+                <p class="project__description--para">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, molestiae cumque esse ducimus quos earum perferendis sequi eos error porro est officiis voluptates ullam praesentium incidunt? Iure adipisci consequuntur quidem.
+                </p>
+                <div class="project__description--links">
+                  <a href="#" class="project__description--link">
+                    <i class="fa-brands fa-github"></i>
+                  </a>
+                  <a href="#">
+                    <i class="fa-solid fa-link"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="project">
+            <div class="project__wrapper">
+              <img class="project__img" src="/assets/blinker mockup.png" alt="">
+              <div class="project__wrapper--bg"></div>
+              <div class="project__description">
+                <h3 class="project__description--title">
+                  Car Sales Projects
+                </h3>
+                <h4 class="project__description--sub-title">
+                  Html, CSS, JavaScript, Vue, Vuex
+                </h4>
+                <p class="project__description--para">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, molestiae cumque esse ducimus quos earum perferendis sequi eos error porro est officiis voluptates ullam praesentium incidunt? Iure adipisci consequuntur quidem.
+                </p>
+                <div class="project__description--links">
+                  <a href="#" class="project__description--link">
+                    <i class="fa-brands fa-github"></i>
+                  </a>
+                  <a href="#">
+                    <i class="fa-solid fa-link"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  <footer>
+    <div class="container">
+      <div class="row footer__row">
+        <figure>
+          <img class="footer__logo" src="/assets/logo.png" alt="">
+        </figure>
+        <div class="footer__social--list">
+          <a href="https://github.com/msjennifereece" target="_blank" class="
+            footer__social--link
+            link__hover--effect
+            link__hover--effect--white
+          ">
+          GitHub
+          </a>
+          <a href="https://www.linkedin.com/in/jennifer-reece-0262862aa/" target="_blank" class="
+            footer__social--link
+            link__hover--effect
+            link__hover--effect--white
+          ">
+          LinkedIn
+          </a>
+          <a href="#" target="_blank" class="
+            footer__social--link
+            link__hover--effect
+            link__hover--effect--white
+          ">
+          Contact
+          </a>
+          <a href="/assets/Jennifer Reece Resume.pdf" target="_blank" class="
+            footer__social--link
+            link__hover--effect
+            link__hover--effect--white
+          ">
+          Resume
+          </a>
+        </div>
+        <div class="footer__copyright">Copyright &copy; Jennifer Reece</div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
