--- a/index.html
+++ b/index.html
@@ -172,29 +172,29 @@
         <div class="footer__social--list">
           <a href="https://github.com/msjennifereece" target="_blank" class="
             footer__social--link
-            link__hover--effect
-            link__hover--effect--white
+            link__hover-effect
+            link__hover-effect--white
           ">
           GitHub
           </a>
           <a href="https://www.linkedin.com/in/jennifer-reece-0262862aa/" target="_blank" class="
             footer__social--link
-            link__hover--effect
-            link__hover--effect--white
+            link__hover-effect
+            link__hover-effect--white
           ">
           LinkedIn
           </a>
           <a href="#" target="_blank" class="
             footer__social--link
-            link__hover--effect
-            link__hover--effect--white
+            link__hover-effect
+            link__hover-effect--white
           ">
           Contact
           </a>
           <a href="/assets/Jennifer Reece Resume.pdf" target="_blank" class="
             footer__social--link
-            link__hover--effect
-            link__hover--effect--white
+            link__hover-effect
+            link__hover-effect--white
           ">
           Resume
           </a>
