--- a/index.html
+++ b/index.html
@@ -77,6 +77,34 @@
       <div class="scroll__icon click"></div>
     </a>
   </section>
+  <div class="modal">
+    <div class="modal__half modal__about">
+      <h3 class="modal__title">Here's a bit about me.</h3>
+      <h4 class="modal__sub-title">Frontend Software Engineer.</h4>
+      <div class="modal__para">
+        I specialize in frontend development using HTML, CSS, and JavaScript, with a focus on creating responsive and accessible web interfaces.
+        <br>
+        I’m committed to writing clean, maintainable code and continuously leveling up my frontend expertise.
+      </div>
+      <div class="modal__languages">
+        <figure class="modal__language">
+          <img class="modal__language--img" src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png" alt="">
+          <span class="language__name">HTML</span>
+        </figure>
+        <figure class="modal__language">
+          <img class="modal__language--img" src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png" alt="">
+          <span class="language__name">CSS</span>
+        </figure>
+        <figure class="modal__language">
+          <img class="modal__language--img" src="	https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png" alt="">
+          <span class="language__name">JAVASCRIPT</span>
+        </figure>
+      </div>
+    </div>
+    <div class="modal__half modal__contact">
+      Let's have a chat!
+    </div>
+  </div>
   <section id="projects">
     <div class="container">
       <div class="row">
