--- a/index.html
+++ b/index.html
@@ -102,7 +102,36 @@
       </div>
     </div>
     <div class="modal__half modal__contact">
-      Let's have a chat!
+      <h3 class="modal__title modal__title--contact">
+        Let's have a chat!
+      </h3>
+      <h4 class="modal__sub-title modal__sub-title--contact">
+        I'm currently open to new opportunities.
+      </h4>
+      <form action="" id="contact__form">
+        <div class="form__item">
+          <label class="form__item--label">Name</label>
+          <input class="input" name="user_name" type="text" required></input>
+        </div>
+        <div class="form__item">
+          <label class="form__item--label">E-mail</label>
+          <input class="input" name="user_email" type="email" required></input>
+        </div>
+        <div class="form__item">
+          <label class="form__item--label">Message</label>
+          <textarea class="input" name="message" type="text" required></textarea>
+        </div>
+        <button id="contact__submit" class="form__submit">
+          Send it my way
+        </button>
+      </form>
+      <div class="modal__overlay modal__overlay--loading">
+        <i class="fa-solid fa-spinner"></i>
+      </div>
+      <div class="modal__overlay modal__overlay--success">
+        Thanks for the message! Looking forward to speaking to you soon.
+      </div>
+      <i class="fa-solid fa-xmark click"></i>
     </div>
   </div>
   <section id="projects">
