--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
   <title>Jennifer Reece</title>
   <link rel="stylesheet" href="styles.css">
   <script src="https://kit.fontawesome.com/03673f4e3f.js" crossorigin="anonymous"></script>
-  <script src=""></script>
+  <script src="index.js"></script>
+  <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+</script>
+<script type="text/javascript">
+   (function(){
+      emailjs.init({
+        publicKey: "5nfcYx16VEeAWrbBH",
+      });
+   })();
+</script>
 </head>
 <body>
   <section id="landing-page">
@@ -108,7 +118,7 @@
       <h4 class="modal__sub-title modal__sub-title--contact">
         I'm currently open to new opportunities.
       </h4>
-      <form action="" id="contact__form">
+      <form id="contact__form" onsubmit="contact(event)">
         <div class="form__item">
           <label class="form__item--label">Name</label>
           <input class="input" name="user_name" type="text" required></input>
